<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="32dp"
        android:padding="@dimen/padding_medium"
        android:text="@string/init_msg"
        tools:context=".SampleApp" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="0dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_label" />

    <CheckBox
    android:text="@string/check_label"
    android:id="@+id/check1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />


    <RadioGroup
    android:id="@+id/group"
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
	android:layout_below="@+id/button"
	android:layout_marginLeft="26dp"
    android:layout_marginTop="0dp"
    >

    <RadioButton
        android:text="@string/radio1_label"
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <RadioButton
        android:text="@string/radio2_label"
        android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</RadioGroup>


    <SeekBar
    android:id="@+id/seek"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:max="100"
    android:progress="50"

    	android:layout_below="@+id/group"
    	    android:layout_marginTop="0dp"
    />

    <RatingBar
    android:id="@+id/rate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:numStars="5"
    android:rating="2.5"
        	android:layout_below="@+id/seek"
    	    android:layout_marginTop="0dp"
    />




</RelativeLayout>
